[package]
name = "busse-rebate-tracing-transformer-rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.24"
meilisearch-sdk = "0.18.0"
mongodb = "2.3.0"
serde = "1.0.144"
tokio = "1.21.0"
